package protocol;

import connection.ClientConnection;
import utils.Config;

import java.util.List;

public class ClientMessenger {
    private final ClientConnection connection;

    public ClientMessenger(ClientConnection connection) {
        this.connection = connection;
    }

    // broadcast to single user client

    /**
     * send wlcome to client
     */
    public void sendWelcome() {
        connection.sendMessage(MessageFormatter.createWelcome(Config.SERVER_VERSION));
    }

    /**
     * send ping to client
     */
    public void sendPing() {
        connection.sendMessage(MessageFormatter.createPing());
    }

    /**
     * send online to client
     * @param users the online users
     */
    public void sendOnline(List<String> users) {
        connection.sendMessage(MessageFormatter.createOnline(users));
    }

    /**
     * send start message for ToH to client
     * @param opponent opponent name
     * @param roundNumber the number of the current round
     */
    public void sendStart(String opponent, int roundNumber) {
        connection.sendMessage(MessageFormatter.createStart(opponent, roundNumber));
    }

    /**
     * Send unknown command to client
     */
    public void sendUnknownCommand() {
        connection.sendMessage(MessageFormatter.createUnknownCommand());
    }

    /**
     * send OK to client
     * @param header header to send (OK)
     */
    public void sendOK(String header) {
        connection.sendMessage(MessageFormatter.createOkResponse(header));
    }

    /**
     * Send error to client
     * @param header error header
     * @param code error code
     */
    public void sendError(String header, int code) {
        connection.sendMessage(MessageFormatter.createErrorResponse(header, code));
    }

    public void sendAccepted(String transferId, String accepter) {
        connection.sendMessage(MessageFormatter.createFileAccepted(transferId, accepter));
    }

    /**
     * send parse error to client
     */
    public void sendParseError() {
        connection.sendMessage(MessageFormatter.createParseErrorResponse());
    }

    /**
     * send pong error to client
     */
    public void sendPongError(int code) {
        connection.sendMessage(MessageFormatter.createPongErrorResponse(code));
    }

    // broadcast to multiple/other clients

    /**
     * Broadcasts a message to multiple clients
     * @param connections list of client connections
     * @param message the formatted message to send
     */
    public static void broadcast(List<ClientConnection> connections, String message) {
        connections.forEach(conn -> conn.sendMessage(message));
    }

    /**
     * sends JOINED notification to multiple clients
     * @param connections list of client connections
     * @param username the username that joined
     */
    public static void broadcastJoined(List<ClientConnection> connections, String username) {
        String message = MessageFormatter.createJoined(username);
        broadcast(connections, message);
    }

    /**
     * Sends LEFT notif to multiple clients
     * @param connections list of connectedd clients
     * @param username the username that left
     */
    public static void broadcastLeft(List<ClientConnection> connections, String username) {
        String message = MessageFormatter.createLeft(username);
        broadcast(connections, message);
    }

    /**
     * Sends a message to a single specific connection
     * @param connection the target connection
     * @param message the formatted message to send
     */
    public static void sendTo(ClientConnection connection, String message) {
        connection.sendMessage(message);
    }
}
